<?xml version="1.0"?>
<package format="2">
  <name>collection_robot</name>
  <version>1.0.0</version>
  <description>The collection_robot package</description>
 
  <maintainer email="kssutrad@umd.edu">Karan</maintainer>
  <maintainer email="ajinkyap@umd.edu">Ajinkya</maintainer>
  <maintainer email="dahmani@umd.edu">Mahmoud</maintainer>
 
  <license>MIT</license>
  
  <url type="website">https://github.com/dahhmani/collection_robot
  </url> 

  <author email="kssutrad@umd.edu">Karan</author> 
  <author email="ajinkyap@umd.edu">Ajinkya</author> 
  <author email="dahmani@umd.edu">Mahmoud</author> 
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend> 

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend> 
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend> 

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend> 
  <exec_depend>image_transport</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
